ui: fix scrollbars position on large displays

--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -18,7 +18,7 @@
         background-color: #2f3438;
     }
 
-    pre>code {
+    pre {
         background-color: #2f3438;
     }
 
